# custom-cosmos-address

./: .gitignore  README.md  bip32_pure.py  cosmos_address.py  kernel_ripemd160.cu  kernel_sha256.cu  main.py  pyproject.toml  requirements.txt  scan.py  scanner.py  temps.py  workspace.py
.github/workflows/: test.yml
debian/: custom-cosmos-address.desktop
gui/: __init__.py  app.py  theme.py  widgets.py  worker.py
gui/qt/: __init__.py  found_wallets_table.py  generator_page.py  main_window.py  palettes.py  scan_runner.py  scanner_page.py  theme.py  widgets.py
scripts/: build-deb.sh  test_entry_main.py  test_gui_defaults.py  test_gui_pool.py  test_gui_start.py  test_installed_spawn.py  test_spawn_path.py
tests/: test_cosmos_address.py  test_workspace.py
