[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-cosmos-address"
version = "1.3.4"
description = "CPU vanity address generator for Cosmos SDK chains"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ecdsa",
    "psutil",
    "bech32",
    "mnemonic",
    "ijson",
    "pycryptodome",
    "requests",
    "tqdm",
    "PySide6>=6.5",
]

[project.scripts]
cosmos-vanity = "main:main"
cosmos-scan = "scan:main"
cosmos-vanity-gui = "gui.app:main"

[tool.setuptools]
py-modules = ["cosmos_address", "main", "scan", "scanner", "bip32_pure"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
